Import to cloud z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@
     src: url('../fonts/SourceSansPro-ExtraLight.eot');
     src: url('../fonts/SourceSansPro-ExtraLight.eot?#iefix') format('embedded-opentype'), url('../fonts/SourceSansPro-ExtraLight.woff2') format('woff2'), url('../fonts/SourceSansPro-ExtraLight.woff') format('woff'), url('../fonts/SourceSansPro-ExtraLight.ttf') format('truetype'), url('../fonts/SourceSansPro-ExtraLight.svg#source_sans_proextralight') format('svg');
     font-weight: normal;
-    font-style: normal;
+    font-style: normal;.
 }
 @font-face {
     font-family: 'source_sans_prolight';
@@ -11820,6 +11820,7 @@ table {
     left: 300px;
     bottom: 50px;
     padding: 34px 0 0 0;
+    z-index: 10;
 }
 .button.download-button.down-arrow, .button.download-button.to-clouddrive {
     background-image: url(../images/mega/download-sprite-v6.png);
